# BotoEducation

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml  run.py
app/: main.py
app/api/: routes.py
app/bot/: runner.py
app/core/: config.py  executor.py  logging.py  security.py
app/db/: database.py
app/models/: shorten.py
app/services/: shortener.py
tests/: test_api.py
